quick fix for the form in register page so it aligns left

--- a/CopyHaste/static/css/cover.css
+++ b/CopyHaste/static/css/cover.css
@@ -25,7 +25,10 @@ textarea:focus, input:focus {
     color: grey;
 }
 
-
+form {
+  margin-top: 15%;
+  text-align: left;
+}
 
 
 /* Links */
